Clean up test ObjectMapper usage and add ProviderAlpha/Beta JSON fixtures
Reuse a single static ObjectMapper per test class instead of rebuilding
it per test, replace deprecated JsonNode.asText() with asString(), and
use List.getFirst() over get(0). Also add JSON fixtures under
src/test/resources mirroring the example payloads in requirements.md,
for use by the upcoming ProviderAlpha/ProviderBeta parsing tests.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_018PgfDCeLCGZSscA5TuPUJB